2009-04-24  Stuart Cassoff <stwo@users.sf.net>

	* unix/Makefile.in:	Removed stray @ from Makefile.in test target.
	[Bug 2764263], Don't chmod+x square demo. [Bug 1945073],
	Adjustable demo install location. [Patch 2764272]

2009-04-24  Stuart Cassoff <stwo@users.sf.net>

	* unix/Makefile.in:	Don't chmod/exec installManPage.
				[Patch 2769530]

2009-04-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinDialog.c (Tk_ChooseDirectoryObjCmd): enable the new
	style choosedir that has a "New Folder" button, with
	::tk::winChooseDirFlags override for new behavior. [Bug 2779910]

2009-04-14  Donal K. Fellows  <dkf@users.sf.net>

	* library/xmfbox.tcl (MotifFDialog_ActivateSEnt): Ensure that the
	* library/tkfbox.tcl (Done):			  dialogs have the
	correct levels for [upvar] for accessing the -typevariable var.

2009-04-13  Donal K. Fellows  <dkf@users.sf.net>

	* library/tk.tcl: Corrected another problem; can't determine the exact
	type of OS - needed for figuring out how to guess the correct binding
	in some circumstances - in a safe interpreter.

	* library/tkfbox.tcl: [Bug 2759119]: Corrected level handling for the
	* library/xmfbox.tcl: -typevariable option following updates to tk.tcl
	[Patch 2739360]: Use more modern images from Tango set for the non-
	Motif file dialog. Thanks to Emiliano for bring this to my attention.

2008-04-10  Joe English  <jenglish@users.sourceforge.net

	* library/palette.tcl (tk_setPalette): Don't set *selectColor:
	#b03060; this makes radio- and checkbuttons look wrong post-TIP#109.

2009-04-10  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in (Darwin):	use Darwin SUSv3 extensions if
					available.
	* unix/configure:		autoconf-2.59
	* unix/tkConfig.h.in:		autoheader-2.59

	* library/demos/filebox.tcl: only show "Motif Style Dialog"
	checkbutton on X11 windowingsystem.

	* library/demos/widget: GOOBE: use ttk::cursor

	* library/demos/knightstour.tcl: fix knightstour demo not running from
	interactive wish.
